syntax = "proto3";
option go_package = "./messages";

message StorageRequest {
    // CHANGE: include checksum metadata in PUT request before data-plane bytes.
    string file_name = 1;
    uint64 size = 2;
    bytes checksum = 3;
}

message RetrievalRequest {
    string file_name = 1;
}

message ChecksumVerification {
   bytes checksum = 1; 
}

message Response {
    bool ok = 1;
    string message = 2;
}

message RetrievalResponse {
    // CHANGE: include checksum metadata in GET response before data-plane bytes.
    Response resp = 1;
    uint64 size = 2;
    bytes checksum = 3;
}

message Wrapper {
    oneof msg {
        Response response = 1;
        StorageRequest storage_req = 2;
        RetrievalRequest retrieval_req = 3;
        RetrievalResponse retrieval_resp = 4;
        ChecksumVerification checksum = 5;
    }
}
